Fix colour contrast on submitted by field

--- a/profiles/ug/themes/ug/ug_theme/css/media.css
+++ b/profiles/ug/themes/ug/ug_theme/css/media.css
@@ -21,6 +21,10 @@
         vertical-align: middle;
     }
 
+    .submitted {
+        color: #666666;   
+    }
+
     /*---------------------
     Thumbnails
     ---------------------**/
